<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF4F4"
    tools:context=".CalculatorCurrencyActivity">

    <EditText
        android:id="@+id/PLNInput"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:gravity="bottom|right"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/plnFromInput"
        app:layout_constraintEnd_toStartOf="@+id/plnView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plnView1"
        android:layout_width="80sp"
        android:layout_height="30sp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:gravity="center"
        android:text="@string/pln"
        android:textColor="#5282E1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/otherCurOutput"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="44dp"
        android:gravity="bottom|end"

        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PLNInput" />

    <Spinner
        android:id="@+id/spinnerFromPLN"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plnView1" />

    <Button
        android:id="@+id/buttonFromPLN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calculateFromPLN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherCurOutput" />

    <EditText
        android:id="@+id/otherInput"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:gravity="bottom|right"
        android:inputType="textPersonName"
        android:text="@string/toPLNtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />


    <Spinner
        android:id="@+id/spinnerToPLN"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <TextView
        android:id="@+id/PLNOutput"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="44dp"
        android:gravity="bottom|end"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherInput" />

    <TextView
        android:id="@+id/plnView2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:gravity="center"
        android:text="PLN"
        android:textColor="#5282E1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerToPLN"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonToPLN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/oblicz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plnView2" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:text="@string/converterFromPLN"
        android:textColor="#673AB7"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:text="@string/converterToPLN"
        android:textColor="#673AB7"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFromPLN" />
</androidx.constraintlayout.widget.ConstraintLayout>